# rt-ftgu

./: .gitmodules  CMakeLists.txt  README.md
include/: pch.h
include/rt/: application.h
include/rt/brdf/: brdf.h  glossy.h  lambertian.h  reflective.h
include/rt/cameras/: camera.h  pinhole.h  thin_lens.h
include/rt/lights/: ambient.h  ambient_occluder.h  directional.h  light.h  point.h
include/rt/materials/: material.h  matte.h  phong.h
include/rt/objects/: object.h
include/rt/objects/primitives/: plane.h  sphere.h
include/rt/samplers/: multi_stratified.h  n_rooks.h  random.h  sampler.h  standard.h  stratified.h
include/rt/utilities/: directory.h  hit_record.h  onb.h  random.h  ray.h  scene_data.h  writer.h
lib/: CMakeLists.txt
lib/stb/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/rt/: application.cpp
src/rt/brdf/: brdf.cpp  glossy.cpp  lambertian.cpp  reflective.cpp
src/rt/cameras/: camera.cpp  pinhole.cpp  thin_lens.cpp
src/rt/lights/: ambient.cpp  ambient_occluder.cpp  directional.cpp  light.cpp  point.cpp
src/rt/materials/: material.cpp  matte.cpp  phong.cpp
src/rt/objects/: object.cpp
src/rt/objects/primitives/: plane.cpp  sphere.cpp
src/rt/samplers/: multi_stratified.cpp  n_rooks.cpp  random.cpp  sampler.cpp  standard.cpp  stratified.cpp
src/rt/utilities/: directory.cpp  hit_record.cpp  onb.cpp  random.cpp  ray.cpp  scene_data.cpp  writer.cpp
